--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,8 +75,12 @@ dependencies {
     def retrofitgson_version = "2.9.0"
     def okhttplogging_version = "4.10.0"
     def play_services_base_version = "18.1.0"
+    def coroutines_version = "1.3.9"
+    def swiperefreshlayout_version = "1.1.0"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
@@ -98,6 +102,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttplogging_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "com.google.android.gms:play-services-base:$play_services_base_version"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefreshlayout_version"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
